testsuite/poke.pkl/cast-struct-diag-3.pk
/* { dg-do compile } */

type Packet = struct { };

var x = 10 as Packet; /* { dg-error "invalid cast\n.*expected struct" } */
